Fix: fixed the config being constantly regenerated with new data in the arrays on top of the previous one